add admin functionality

--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -10,9 +10,19 @@
         <% if (posts) { %>
             <% posts.forEach(function(post) { %>
                 <div class="post" style="background-color: aquamarine;">
-                    <h3><%= post.title %> by User <%=post.user_id %></h3>
-                    <p><%= post.created_at %></p>
+                    <h3><%= post.title %></h3>
+                    <% if (locals.user) {%>
+                        <% if (user.membership == "premium") { %>
+                        <h3><%= post.firstname %> <%= post.lastname %></h3>
+                        <p><%= post.created_at %></p>
+                    <% }} %>
                     <p><%= post.content %></p>
+                    <% if (locals.user) {%>
+                        <% if (user.admin) { %>
+                        <form action="/delete-post/<%= post.id %>" method="POST">
+                            <button type="submit">Delete Post</button>
+                        </form>
+                    <% }} %>
                 </div>
             <% }); %>
     <% } else { %>
@@ -20,6 +30,7 @@
         <% }; %>
     </div>
     <div>
+        <% if (locals.user) {%>
         <h3>Create a post:</h3>
         <form action="/messages" method="POST">
             <label for="title">Ttile:</label>
@@ -30,6 +41,11 @@
             <br>
             <button type="submit">Submit</button>
         </form>
+        <% } else { %>
+            <h1>please log in or sign up to create a post</h1>
+        <a href="/sign-up">Sign Up</a>
+        <a href="/login">Log In</a>
+        <%}%>
     </div>
 </body>
 </html>
